stylesheet.less
/* ... */
.wrapper {
    width: 90%;
    margin: 0 5%;
    @media only screen and (min-width: 1140px) {
        width: 1024px;
        margin: 0 auto;
    }
    @media only screen and (max-width: 650px) {
        width: 100%;
        margin: 0 auto;
    }
}

/* ===============================
   HEADER
   =============================== */

header {
    background-color: transparent;
    text-align: center;
    padding: 0;
    margin-top: 1em;
    clear: both;
    @media @tablet {
        margin-top:0;
        background-color: @color-swatch7;
    }
    .wrapper {
        position: relative;
        .widget.logo {
            -webkit-border-radius: 200px;
            -moz-border-radius: 200px;
            border-radius: 200px;
            width: 130px;
            height: 130px;
            z-index: 999;
            background-color: @color-swatch2;
            text-align: center;
            float: none;
            margin: 0 auto -70px;
            overflow: hidden;
            text-align: center;
            position: relative;
            a {
                margin: 0 auto;
                .logo {
                    max-width: 130px;
                    max-height: 130px;
                    img {
                        margin: auto;
                        position: absolute;
                        top: 0;
                        bottom: 0;
                        left: 0;
                        right: 0;
                    }
                }
            }
            @media @tablet {
                margin: 2em auto 0;
            }
        }
        .companyheader {
            width: 100%;
            float: left;
            top: 1em;
            background-color: @color-swatch6;
            @media @tablet {
                width: 100%;
                margin: 0;
            }
            .header-companyname {
                background-color: @color-swatch7;
                width: 50%;
                float: left;
                @media @tablet {
                    width: 100%;
                    margin: 0 auto;
                    background-color: @color-swatch7;
                }
                .companyname {
                    text-align: left;
                    min-height: 5em;
                    @media @tablet {
                        min-height: 1em;
                        width:100%;
                        text-align: center;
                    }
                    a {
                        padding: 1em 4em 1em 1em;
                        display: block;
                        font-family: @font-swatch10-font-family;
                        font-weight: @font-swatch10-font-weight;
                        color: @font-swatch10-color;
                        line-height: @font-swatch10-line-height;
                        letter-spacing: @font-swatch10-letter-spacing;
                        font-size: @font-swatch10-font-size;
                        text-decoration: none;
                        &:hover {
                            text-decoration: none;
                        }
                        @media @tablet {
                            padding: 1em 0;
                        }
                        @media @mobile {
                            font-size: bkscale(@font-swatch10-font-size,0.8);
                            line-height: bkscale(@font-swatch10-line-height,0.8);
                        }
                    }
                } /* end companyname a */
            } /* end header-companyname */
        } /* end companyheader */
    } /*end wrapper*/
} /*end header*/



/* SEARCH WIDGET */


.header-search {
    float: right;
    width: 50%;
    background-color: @color-swatch6;
    min-height: 5em;
    @media @tablet {
        width:100%;
        float: none;
        min-height: 0px;
        background-color: @color-swatch7;
        clear: both;
    }
}

.main .widget.blogsearch {
    text-align: left;
}

.widget {
    &.blogsearch {
        padding: 1.2em 1em 0;
        text-align: right;
        @media @tablet {
            width: 90%;
            margin: 0 5%;
        }
        .blog-search-form {
            label{
                display: none;
            }
            input {
                -webkit-appearance: none;
                -webkit-border-radius: 0;
                -moz-appearance: none;
                background-color: @color-swatch1;
                border: none;
                height: 35px;
                margin: 0;
                @media @tablet {
                    width: 80%;
                    height: 45px;
                }
            }
            button {
                background-image:image('/images/search-icon.png');
                background-repeat: no-repeat;
                background-position: center;
                border: none;
                border-left: 2px solid @color-swatch7;
                background-color: transparent;
                text-indent: -9999px;
                width: 25px;
                height: 35px;
                background-color: @color-swatch1;
                padding: 0;
                @media @tablet {
                    width: 20%;
                    height: 45px;
                    margin-bottom: 2em;
                }
            }
        }
    }
}


/* ===============================
   EXTENDED NAVIGATION
   =============================== */


#page-zones__template-widgets__extendednavigation-navigationheader {
    overflow: visible;
}

.bk-overlay.hover {
    min-height: 4em;
}


.nav-extended.wrapper {
    @media @tablet {
        width: 100%;
        margin: 0 auto;
    }
}
/* ... */

